fix(@porrtal/a-shell-material): change z-index so entity menu shows (defaults to z 1000)

--- a/apps/porrtal-auth/a-mock-app/src/styles.scss
+++ b/apps/porrtal-auth/a-mock-app/src/styles.scss
@@ -26,3 +26,8 @@ $angular-default-theme: mat.define-light-theme(
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.cdk-global-overlay-wrapper, .cdk-overlay-container {
+  z-index: 99999 !important;
+}
+
